expected/main/gens/primInitArray-neg-32.err
ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 6
external ia3  {primInitArray 3}   :: (Ix 3 -> Init SW) -> Init (Array 3 SW)
         ^
Generator primInitArray requires 2 arguments

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 7
external ia3W {primInitArray 3 W} :: (Ix 3 -> Init SW) -> Init (Array 3 SW)
         ^
Generator argument 2 (W) does not have expected kind (area)

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 8
external iaWW {primInitArray W W} :: (Ix 3 -> Init SW) -> Init (Array 3 SW)
         ^
Generator argument 1 (W) does not have expected kind (nat)

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 5
entrypoint ia3, ia3W, iaWW
^
"ia3" is not in scope

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 5
entrypoint ia3, ia3W, iaWW
^
"ia3W" is not in scope

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 5
entrypoint ia3, ia3W, iaWW
^
"iaWW" is not in scope

ERROR: Aborting after 6 previously reported errors

